--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/FileStore/FileLinks.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/FileStore/FileLinks.razor
@@ -51,7 +51,7 @@
         return new FileList();
     }
 
-    void FileUploadedAction(Tuple<bool, FileHead> fileUploadResult)
+    void FileUploadedAction(Tuple<bool, FileHead, FileVer> fileUploadResult)
     {
         if (fileUploadResult.Item1)
         {
