File upload and versioning within task screen now fully functional, workling on task completion.

--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/PLTask/TaskView.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/PLTask/TaskView.razor
@@ -182,6 +182,7 @@
         textCodes.Add(10908);
         textCodes.Add(10911);
         textCodes.Add(10912);
+        textCodes.Add(10913);
         textCodes.Add(10915);
         textCodes.Add(10917);
         textCodes.Add(10918);
