--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
@@ -4,6 +4,7 @@
 @using Blazorise.DataGrid
 @using Blazorise.Components
 @using Blazorise.Snackbar
+@using Blazorise.SpinKit
 @using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
