--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/_Host.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/_Host.cshtml
@@ -30,6 +30,7 @@
     <link href="_content/Blazorise.Sidebar/blazorise.sidebar.css" rel="stylesheet" />
     <link href="_content/Blazorise.DataGrid/blazorise.datagrid.css" rel="stylesheet" />
     <link href="_content/Blazorise.Snackbar/blazorise.snackbar.css" rel="stylesheet" />
+    <link href="_content/Blazorise.SpinKit/blazorise.spinkit.css" rel="stylesheet" />
     <link href="css/panache/pl-googlecharts.css" rel="stylesheet" />
 </head>
 <body>
