Adding Template Functionality for tasks.  Created Repositories and main domain objects, need to update EF migration and then create API controllers.

--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarAuthorized.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarAuthorized.razor
@@ -18,6 +18,9 @@
         <BarStart>
             <SideBarMenu />
         </BarStart>
+        <BarEnd>
+            <SideBarFooter />
+        </BarEnd>
     </BarMenu>
 </CascadingValue>
 
